## NEXT

- Fix secondary windows to being resizable. ([#15](https://github.com/roblillack/fsviewer/pull/15))
- Fix showing correct free disk space with SI prefixes. ([#17](https://github.com/roblillack/fsviewer/pull/17))
- Fix alpha channel blending for icons everywhere. ([#18](https://github.com/roblillack/fsviewer/pull/18))

## FSViewer 0.2.7 (2024-06-22)

- Switch build system to cmake
- Fix build to work with modern versions of WINGs & Window Maker
- Adapt window bottom to more closely resemble NeXT FileViewer
- Add support for showing available space on filesystem
- Fix recurring crashes
- Fix main window not showing title bar
- Fix building on 64 bit systems
- Fix building on FreeBSD
- Fix building on OpenBSD

## FSViewer 0.2.6 (2007-10-14)
Latest version done by Guido Scholz <guido.scholz@bayernline.de>

	* po/sv.po: Swedish translation added.
	* man/fsviewer.x1, chdef.x1: Man pages from debian package added.
	* configure.sub, configure.guess: updated autoconf files
	* configure.ac: some administrative changes, error messages for
	not found libraries etc.
	* chdef/chdef.c: Removed dependency from "proplist-compat.h".
	* FSPrefs.c: Update file view if view options are changed
	activating the apply button.

FSViewer.app-0.2.5 (20021215)
-----------------------------
	o All lists in preferencs panel and inspector panel are sorted
	  in alphabetical order.
	o Added a russian (ru) translation.
	o Changed gettext DOMAIN from "FSViewer.app" to "FSViewer".
	o Removed dependency from "proplist-compat.h".
	o Comment out <sys/rlist.h> in FSUtils.c for FreeBSD 4.6.
	o Revised the german (de) translation (now more "NeXTish").
	o Changes in attribute inspector panel:
	  - Link label now changes color (black/darkgrey)
	  - File size is displayed in Bytes/KB/MB
	o A selection change in file viewer lists now updates the
	  inspector panel.


FSViewer.app-0.2.4 (20021110)
-----------------------------
	o Some administrative changes to remove the dist-bzip2 target